# vodozemac

./: .gitignore  Cargo.toml  help.html  index.html  settings.html
bindings/: Cargo.toml  DOCUMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Makefile  QUICK_REFERENCE.md  README.md  SETUP_COMPLETE.md  UNIFFI_EXPANSION_GUIDE.md  build.rs  generate_bindings.sh  test_bindings.swift  test_megolm_structs.swift  test_swift_generation.sh  vodozemac.udl
bindings/docs/: BUILD_SCRIPTS.md  INTEGRATION_GUIDE.md  XcodeIntegrationGuide.md
bindings/src/: lib.rs  test_bindings.rs  tests.rs  vodozemac.udl  vodozemac.udl.bak
bindings/tests/: README.md  SWIFT_TESTS_ANALYSIS.md  VodozemacBindingsTests.swift  VodozemacComprehensiveTests.swift  run_clean_tests.sh  run_comprehensive_tests.sh  run_swift_package_tests.sh  setup_swift_package_tests.sh  test_megolm_bindings.swift
bindings/tests/VodozemacTests.xcodeproj/: project.pbxproj
bindings/tests/kotlin_tests/: README.md  build.gradle.kts  run_kotlin_tests.sh
bindings/tests/kotlin_tests/src/test/kotlin/: BasicLoadTest.kt  (+3 more)
bindings/tests/rust_reference/: Cargo.toml  README.md
bindings/tests/rust_reference/src/: main.rs  main_simple.rs
bindings/tests/swift_tests/: Package.swift
bindings/tests/swift_tests/Tests/: VodozemacTests.swift  test_vectors.json
bindings/vodozemac_uniffi/: Cargo.toml  build.rs
bindings/vodozemac_uniffi/src/: lib.rs
bindings/xcode-test/: ecies_tests.swift  main.swift  megolm_tests.swift  olm_tests.swift  run_xcode_test.sh  sas_tests.swift  simple_test.swift  simple_xcode_test.sh  test_ecies_only.sh
(+232 files in other folders)
