[package]
name = "vodozemac-bindings"
version = "0.9.0"
edition = "2024"
authors = [
    "Umair Nasir <umair.nasir@gmail.com>"
]
description = "UniFFI bindings for vodozemac"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
name = "vodozemac_bindings"

[dependencies]
vodozemac = { path = "..", version = "0.9.0" }
uniffi = "0.29.4"
thiserror = "2.0"

[build-dependencies]

