[package]
name = "vodozemac_uniffi"
version = "0.9.0"
edition = "2024"
license = "Apache-2.0"
description = "UniFFI bindings for the vodozemac Rust crate"
authors = ["Umair Nasir <umair.nasir@gmail.com>"]

[lib]
crate-type = ["cdylib", "staticlib"]
name = "vodozemac_uniffi"

[dependencies]
vodozemac = { path = "../../", default-features = false, features = ["libolm-compat"] }
uniffi = "0.29"

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }

[features]
default = []
